Adds data to connect with db for development and production

--- a/src/main/resources/development.properties
+++ b/src/main/resources/development.properties
@@ -1,1 +1,4 @@
-testKey=TestValueFromDevelopment
+driverClassName=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:orcl
+username=bookshop
+password=admin
