--- a/src/main/resources/production.properties
+++ b/src/main/resources/production.properties
@@ -1,1 +1,4 @@
-testKey=testValueFromProduction
+driverClassName=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:orcl
+username=bookshop
+password=admin
