--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,10 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<spring.version>4.3.7.RELEASE</spring.version>
+		<spring-data.version>1.11.1.RELEASE</spring-data.version>
 		<log4j2.version>2.8.1</log4j2.version>
+		<hibernate.version>5.2.9.Final</hibernate.version>
+		<jackson.version>2.8.7</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -19,11 +22,20 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>${spring-data.version}</version>
+		</dependency>
+
+		
 	  	<dependency>
 	    	<groupId>org.apache.logging.log4j</groupId>
 	    	<artifactId>log4j-api</artifactId>
@@ -39,6 +51,18 @@
     		<artifactId>log4j-jcl</artifactId>
     		<version>${log4j2.version}</version>
   		</dependency>
+  		
+  		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>${hibernate.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>bookshop</finalName>
