--- a/src/main/resources/development.properties
+++ b/src/main/resources/development.properties
@@ -2,3 +2,4 @@ driverClassName=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:orcl
 username=bookshop
 password=admin
+showSql=true
