--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,33 @@
 	<name>bookshop Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
+		<junit.version>4.12</junit.version>
+		<mockito.version>2.7.22</mockito.version>
+		
 		<spring.version>4.3.7.RELEASE</spring.version>
 		<spring-data.version>1.11.1.RELEASE</spring-data.version>
 		<log4j2.version>2.8.1</log4j2.version>
 		<hibernate.version>5.2.9.Final</hibernate.version>
 		<jackson.version>2.8.7</jackson.version>
+		<apache-commons.version>3.5</apache-commons.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>${junit.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>${mockito.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -62,6 +77,12 @@
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
 		    <version>${jackson.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>${apache-commons.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
