--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<properties>
 		<junit.version>4.12</junit.version>
 		<mockito.version>2.7.22</mockito.version>
+		<hamcrest.version>1.3</hamcrest.version>
+		<jsonpath.version>2.2.0</jsonpath.version>
 		
 		<spring.version>4.3.7.RELEASE</spring.version>
 		<spring-data.version>1.11.1.RELEASE</spring-data.version>
@@ -24,18 +26,35 @@
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
 		    <version>${junit.version}</version>
+		    <scope>test</scope>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-test</artifactId>
 		    <version>${spring.version}</version>
+		    <scope>test</scope>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.mockito</groupId>
 		    <artifactId>mockito-core</artifactId>
 		    <version>${mockito.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-all</artifactId>
+		    <version>${hamcrest.version}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>${jsonpath.version}</version>
+		    <scope>test</scope>
 		</dependency>
 		
 		<dependency>
@@ -50,7 +69,6 @@
 		    <version>${spring-data.version}</version>
 		</dependency>
 
-		
 	  	<dependency>
 	    	<groupId>org.apache.logging.log4j</groupId>
 	    	<artifactId>log4j-api</artifactId>
