Adds JWT token authentication to resources

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		
 		<spring.version>4.3.7.RELEASE</spring.version>
 		<spring-data.version>1.11.1.RELEASE</spring-data.version>
+		<spring-security.version>4.2.3.RELEASE</spring-security.version>
+		<web-token.version>0.7.0</web-token.version>
 		<log4j2.version>2.8.1</log4j2.version>
 		<hibernate.version>5.2.9.Final</hibernate.version>
 		<jackson.version>2.8.7</jackson.version>
@@ -112,6 +114,24 @@
 		    <artifactId>spring-data-jpa</artifactId>
 		    <version>${spring-data.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		    <version>${spring-security.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		    <version>${spring-security.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>${web-token.version}</version>
+		</dependency>
 
 	  	<dependency>
 	    	<groupId>org.apache.logging.log4j</groupId>
@@ -128,7 +148,7 @@
     		<artifactId>log4j-jcl</artifactId>
     		<version>${log4j2.version}</version>
   		</dependency>
-  		
+
   		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-core</artifactId>
