--- a/pom.xml
+++ b/pom.xml
@@ -166,5 +166,11 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>${apache-commons.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
