--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 		    <artifactId>spring-data-jpa</artifactId>
 		    <version>${spring-data.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>${spring-data.version}</version>
+		</dependency>
+
 		
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
