--- a/src/main/resources/production.properties
+++ b/src/main/resources/production.properties
@@ -1,5 +1,9 @@
-driverClassName=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:xe
-username=bookshop
-password=admin
-showSql=false
+oracle.driverClassName=oracle.jdbc.driver.OracleDriver
+oracle.url=jdbc:oracle:thin:@localhost:1521:xe
+oracle.username=bookshop
+oracle.password=admin
+oracle.showSql=false
+
+mongo.databaseName=bookshop
+mongo.host=localhost
+mongo.port=27017
