Add credentials configuration for mongo database

--- a/src/main/resources/development.properties
+++ b/src/main/resources/development.properties
@@ -7,3 +7,5 @@ oracle.showSql=true
 mongo.databaseName=bookshop
 mongo.host=localhost
 mongo.port=27017
+mongo.username=bookshop
+mongo.password=admin
