--- a/src/main/resources/production.properties
+++ b/src/main/resources/production.properties
@@ -7,3 +7,5 @@ oracle.showSql=false
 mongo.databaseName=bookshop
 mongo.host=localhost
 mongo.port=27017
+mongo.username=bookshop
+mongo.password=admin
