Fix problem with testing jpa repositories

--- a/src/main/resources/test.properties
+++ b/src/main/resources/test.properties
@@ -1,5 +1,5 @@
-driverClassName=org.h2.Driver
-url=jdbc:h2:mem:bookshop
-username=bookshop
-password=admin
-showSql=false
+h2.driverClassName=org.h2.Driver
+h2.url=jdbc:h2:mem:bookshop
+h2.username=bookshop
+h2.password=admin
+h2.showSql=false
