--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<web-token.version>0.9.0</web-token.version>
 		<log4j2.version>2.10.0</log4j2.version>
 		<hibernate.version>5.2.13.Final</hibernate.version>
+		<hibernate-validator.version>6.0.9.Final</hibernate-validator.version>
 		<jackson.version>2.9.4</jackson.version>
 		<apache-commons.version>3.7</apache-commons.version>
 	</properties>
@@ -174,6 +175,11 @@
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-core</artifactId>
 		    <version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>${hibernate-validator.version}</version>
 		</dependency>
 		
 		<dependency>
