Add validation for product create and update endpoints

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,13 @@
 category.name.notNull = Category name cannot be empty
 category.name.size = Passed category name: ${validatedValue} size must be between {min} and {max}
+
+product.name.notNull = Product name cannot be empty
+product.name.size = Passed product name: ${validatedValue} size must be between {min} and {max}
+product.producer.notNull = Product producer cannot be empty
+product.producer.size = Passed product producer: ${validatedValue} size must be between {min} and {max}
+product.description.size = Passed product description: ${validatedValue} size must be between {min} and {max}
+product.price.notNull = Product price cannot be empty
+product.price.positiveOrZero = Product price must be zero or greater
+product.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
+product.discount.positiveOrZero = Product discount must be zero or greater
+product.discount.digits = Product discount: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
