Add validation for login endpoint

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -11,3 +11,8 @@ product.price.positiveOrZero = Product price must be zero or greater
 product.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
 product.discount.positiveOrZero = Product discount must be zero or greater
 product.discount.digits = Product discount: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
+
+authenticationRequest.username.notNull = In authentication data username cannot be empty
+authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
+authenticationRequest.password.notNull = In authentication data password cannot be empty
+authenticationRequest.password.size = In authentication data password: ${validatedValue} size must be between {min} and {max}
