Add validation for add admin user endpoint

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -12,6 +12,16 @@ product.price.digits = Product price: ${validatedValue} cannot have more than {i
 product.discount.positiveOrZero = Product discount must be zero or greater
 product.discount.digits = Product discount: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
 
+user.username.notNull = User username cannot be empty
+user.username.size = User username: ${validatedValue} size must be between {min} and {max}
+user.password.notNull = User password cannot be empty
+user.password.size = User password: ${validatedValue} size must be between {min} and {max}
+
+userDetails.name.notNull = User name cannot be empty
+userDetails.name.size = User name: ${validatedValue} size must be between {min} and {max}
+userDetails.surname.notNull = User surname cannot be empty
+userDetails.surname.size = User surname: ${validatedValue} size must be between {min} and {max}
+
 authenticationRequest.username.notNull = In authentication data username cannot be empty
 authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
 authenticationRequest.password.notNull = In authentication data password cannot be empty
