Add validation for not admin user

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -21,6 +21,19 @@ userDetails.name.notNull = User name cannot be empty
 userDetails.name.size = User name: ${validatedValue} size must be between {min} and {max}
 userDetails.surname.notNull = User surname cannot be empty
 userDetails.surname.size = User surname: ${validatedValue} size must be between {min} and {max}
+userDetails.email.notNull = User username cannot be empty
+userDetails.email.size = User username: ${validatedValue} size must be between {min} and {max}
+userDetails.email.email = User email is not valid
+userDetails.phone.notNull = User phone cannot be empty
+userDetails.phone.size = User phone: ${validatedValue} size must be between {min} and {max}
+userDetails.phone.phone = User phone is not valid
+userDetails.city.notNull = User city cannot be empty
+userDetails.city.size = User city: ${validatedValue} size must be between {min} and {max}
+userDetails.street.notNull = User street cannot be empty
+userDetails.street.size = User street: ${validatedValue} size must be between {min} and {max}
+userDetails.state.size = User state: ${validatedValue} size must be between {min} and {max}
+userDetails.zipCode.notNull = User zip code cannot be empty
+userDetails.zipCode.size = User zip code: ${validatedValue} size must be between {min} and {max}
 
 authenticationRequest.username.notNull = In authentication data username cannot be empty
 authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
