Fix validation in product for category property

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -8,9 +8,10 @@ product.producer.size = Passed product producer: ${validatedValue} size must be 
 product.description.size = Passed product description: ${validatedValue} size must be between {min} and {max}
 product.price.notNull = Product price cannot be empty
 product.price.positiveOrZero = Product price must be zero or greater
-product.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
+product.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
 product.discount.positiveOrZero = Product discount must be zero or greater
-product.discount.digits = Product discount: ${validatedValue} cannot have more than {integer} digits before digital places and {fraction} in digital places
+product.discount.digits = Product discount: ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
+product.category.notNull = Product category cannot be empty
 
 user.username.notNull = User username cannot be empty
 user.username.size = User username: ${validatedValue} size must be between {min} and {max}
