Add tests for UserDetails email

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -22,8 +22,8 @@ userDetails.name.notNull = User name cannot be empty
 userDetails.name.size = User name: ${validatedValue} size must be between {min} and {max}
 userDetails.surname.notNull = User surname cannot be empty
 userDetails.surname.size = User surname: ${validatedValue} size must be between {min} and {max}
-userDetails.email.notNull = User username cannot be empty
-userDetails.email.size = User username: ${validatedValue} size must be between {min} and {max}
+userDetails.email.notNull = User email cannot be empty
+userDetails.email.size = User email: ${validatedValue} size must be between {min} and {max}
 userDetails.email.email = User email is not valid
 userDetails.phone.notNull = User phone cannot be empty
 userDetails.phone.size = User phone: ${validatedValue} size must be between {min} and {max}
