Add validation tests for UserData object

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -36,6 +36,9 @@ userDetails.state.size = User state: ${validatedValue} size must be between {min
 userDetails.zipCode.notNull = User zip code cannot be empty
 userDetails.zipCode.size = User zip code: ${validatedValue} size must be between {min} and {max}
 
+userData.user.notNull = User main data cannot be empty
+userData.userDetails.notNull = User details data cannot be empty
+
 authenticationRequest.username.notNull = In authentication data username cannot be empty
 authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
 authenticationRequest.password.notNull = In authentication data password cannot be empty
