Add validation for new and current password

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -43,3 +43,8 @@ authenticationRequest.username.notNull = In authentication data username cannot 
 authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
 authenticationRequest.password.notNull = In authentication data password cannot be empty
 authenticationRequest.password.size = In authentication data password: ${validatedValue} size must be between {min} and {max}
+
+newPassword.currentPassword.notNull = Current password cannot be empty
+newPassword.currentPassword.size = Current password: ${validatedValue} size must be between {min} and {max}
+newPassword.newPassword.notNull = New password cannot be empty
+newPassword.newPassword.size = New password: ${validatedValue} size must be between {min} and {max}
