--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -44,6 +44,7 @@ authenticationRequest.username.size In authentication data username: ${validated
 authenticationRequest.password.notNull = In authentication data password cannot be empty
 authenticationRequest.password.size = In authentication data password: ${validatedValue} size must be between {min} and {max}
 
+newPassword.differentFields = New password: ${validatedValue} cannot be the same like current
 newPassword.currentPassword.notNull = Current password cannot be empty
 newPassword.currentPassword.size = Current password: ${validatedValue} size must be between {min} and {max}
 newPassword.newPassword.notNull = New password cannot be empty
