--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -16,7 +16,7 @@ product.category.notNull = Product category cannot be empty
 user.username.notNull = User username cannot be empty
 user.username.size = User username: ${validatedValue} size must be between {min} and {max}
 user.password.notNull = User password cannot be empty
-user.password.size = User password: ${validatedValue} size must be between {min} and {max}
+user.password.size = User password size must be between {min} and {max}
 
 userDetails.name.notNull = User name cannot be empty
 userDetails.name.size = User name: ${validatedValue} size must be between {min} and {max}
@@ -42,10 +42,10 @@ userData.userDetails.notNull = User details data cannot be empty
 authenticationRequest.username.notNull = In authentication data username cannot be empty
 authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
 authenticationRequest.password.notNull = In authentication data password cannot be empty
-authenticationRequest.password.size = In authentication data password: ${validatedValue} size must be between {min} and {max}
+authenticationRequest.password.size = In authentication data password size must be between {min} and {max}
 
-newPassword.differentFields = New password: ${validatedValue} cannot be the same like current
+newPassword.differentFields = New password cannot be the same like current
 newPassword.currentPassword.notNull = Current password cannot be empty
-newPassword.currentPassword.size = Current password: ${validatedValue} size must be between {min} and {max}
+newPassword.currentPassword.size = Current password size must be between {min} and {max}
 newPassword.newPassword.notNull = New password cannot be empty
-newPassword.newPassword.size = New password: ${validatedValue} size must be between {min} and {max}
+newPassword.newPassword.size = New password size must be between {min} and {max}
