--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -47,5 +47,6 @@ authenticationRequest.password.size = In authentication data password size must 
 newPassword.differentFields = New password cannot be the same like current
 newPassword.currentPassword.notNull = Current password cannot be empty
 newPassword.currentPassword.size = Current password size must be between {min} and {max}
+newPassword.currentPassword.validPassword = Current password is not correct
 newPassword.newPassword.notNull = New password cannot be empty
 newPassword.newPassword.size = New password size must be between {min} and {max}
