Add validation for order received object

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -40,7 +40,7 @@ userData.user.notNull = User main data cannot be empty
 userData.userDetails.notNull = User details data cannot be empty
 
 authenticationRequest.username.notNull = In authentication data username cannot be empty
-authenticationRequest.username.size In authentication data username: ${validatedValue} size must be between {min} and {max}
+authenticationRequest.username.size = In authentication data username: ${validatedValue} size must be between {min} and {max}
 authenticationRequest.password.notNull = In authentication data password cannot be empty
 authenticationRequest.password.size = In authentication data password size must be between {min} and {max}
 
@@ -50,3 +50,24 @@ newPassword.currentPassword.size = Current password size must be between {min} a
 newPassword.currentPassword.validPassword = Current password is not correct
 newPassword.newPassword.notNull = New password cannot be empty
 newPassword.newPassword.size = New password size must be between {min} and {max}
+
+orderData.order.notNull = Order details cannot be empty
+orderData.orderItems.notNull = Ordered products lists cannot be empty
+orderData.orderItems.size = Actually ordered products: ${validatedValue.size()}, ordered products quantity must be between {min} and {max}
+
+order.totalPrice.notNull = Total price cannot be empty
+order.totalPrice.positiveOrZero = Total price must be zero or greater
+order.totalPrice.digits = Total price ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
+order.status.notNull = Status cannot be empty
+order.paymentMethod.notNull = Payment method cannot be empty
+order.shippingMethod.notNull = Shipping method cannot be empty
+order.additionalMessage.size = Additional message size must be between {min} and {max}
+order.paid.notNull = Paid value must be set on true or false
+order.user.notNull = User cannot be empty
+
+orderItem.price.notNull = Product price cannot be empty
+orderItem.price.positiveOrZero = Product price must be zero or greater
+orderItem.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
+orderItem.quantity.notNull = Product quantity cannot be empty
+orderItem.quantity.range = Product quantity: ${validatedValue} must be between {min} and {max}
+orderItem.productId.notNull = Product cannot be empty
