Fix creating new order

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -70,4 +70,4 @@ orderItem.price.positiveOrZero = Product price must be zero or greater
 orderItem.price.digits = Product price: ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
 orderItem.quantity.notNull = Product quantity cannot be empty
 orderItem.quantity.range = Product quantity: ${validatedValue} must be between {min} and {max}
-orderItem.productId.notNull = Product cannot be empty
+orderItem.productId.notNull = Product id cannot be empty
