Add endpoint to modifying order status

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -71,3 +71,5 @@ orderItem.price.digits = Product price: ${validatedValue} cannot have more than 
 orderItem.quantity.notNull = Product quantity cannot be empty
 orderItem.quantity.range = Product quantity: ${validatedValue} must be between {min} and {max}
 orderItem.productId.notNull = Product id cannot be empty
+
+changeStatus.orderStatus.notNull = Order status cannot be empty
