--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 	<name>bookshop Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<properties>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+
 		<hamcrest.version>1.3</hamcrest.version>
 		<junit.version>4.12</junit.version>
 		<dbunit.version>2.5.4</dbunit.version>
@@ -19,7 +22,7 @@
         <bonecp.version>0.8.0.RELEASE</bonecp.version>
         <fongo.version>2.1.1</fongo.version>
         <nosqlunit-mongodb.version>0.14.0</nosqlunit-mongodb.version>
-		
+
 		<spring.version>5.0.3.RELEASE</spring.version>
 		<spring-data.version>2.0.4.RELEASE</spring-data.version>
 		<spring-security.version>5.0.2.RELEASE</spring-security.version>
@@ -30,8 +33,9 @@
 		<jackson.version>2.9.4</jackson.version>
 		<apache-commons.version>3.7</apache-commons.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
+		<javax.xml.bind.version>2.3.1</javax.xml.bind.version>
 	</properties>
-    
+
 	<dependencies>
 		<dependency>
 		    <groupId>org.hamcrest</groupId>
@@ -39,7 +43,7 @@
 		    <version>${hamcrest.version}</version>
 		    <scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
@@ -205,7 +209,13 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>${commons-beanutils.version}</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${javax.xml.bind.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
