Fix validation messages

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -57,11 +57,11 @@ orderData.orderItems.size = Actually ordered products: ${validatedValue.size()},
 
 order.totalPrice.notNull = Total price cannot be empty
 order.totalPrice.positiveOrZero = Total price must be zero or greater
-order.totalPrice.digits = Total price ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
+order.totalPrice.digits = Total price: ${validatedValue} cannot have more than {integer} digits before decimal places and {fraction} in digital places
 order.status.notNull = Status cannot be empty
 order.paymentMethod.notNull = Payment method cannot be empty
 order.shippingMethod.notNull = Shipping method cannot be empty
-order.additionalMessage.size = Additional message size must be between {min} and {max}
+order.additionalMessage.size = Additional message: ${validatedValue} size must be between {min} and {max}
 order.paid.notNull = Paid value must be set on true or false
 order.user.notNull = User cannot be empty
 
