--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<junit.version>4.12</junit.version>
 		<dbunit.version>2.5.4</dbunit.version>
 		<springtestdbunit.version>1.3.0</springtestdbunit.version>
-		<mockito.version>2.15.0</mockito.version>
+		<mockito.version>3.1.0</mockito.version>
 		<jsonpath.version>2.4.0</jsonpath.version>
         <h2.version>1.4.196</h2.version>
         <bonecp.version>0.8.0.RELEASE</bonecp.version>
@@ -28,12 +28,13 @@
 		<spring-security.version>5.0.2.RELEASE</spring-security.version>
 		<web-token.version>0.9.0</web-token.version>
 		<log4j2.version>2.10.0</log4j2.version>
-		<hibernate.version>5.2.13.Final</hibernate.version>
-		<hibernate-validator.version>6.0.9.Final</hibernate-validator.version>
+		<hibernate.version>5.4.5.Final</hibernate.version>
+		<hibernate-validator.version>6.0.17.Final</hibernate-validator.version>
 		<jackson.version>2.9.4</jackson.version>
 		<apache-commons.version>3.7</apache-commons.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<javax.xml.bind.version>2.3.1</javax.xml.bind.version>
+		<mysql.version>8.0.17</mysql.version>
 	</properties>
 
 	<dependencies>
@@ -217,9 +218,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.version}</version>
 		</dependency>
 	</dependencies>
 </project>
