--- a/src/main/resources/development.properties
+++ b/src/main/resources/development.properties
@@ -1,5 +1,5 @@
-oracle.driverClassName=oracle.jdbc.driver.OracleDriver
-oracle.url=jdbc:oracle:thin:@localhost:1521:xe
+oracle.driverClassName=com.mysql.cj.jdbc.Driver
+oracle.url=jdbc:mysql://localhost:3306/bookshop?serverTimezone=UTC
 oracle.username=bookshop
 oracle.password=admin
 oracle.showSql=true
